# DataScienceLib

./: .gitignore  LICENSE.txt  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml
basic_statistics/: scores.py
etl/: Cleaner.py  DirWatcher.py  OutlierRemover.py  OutlierRemover_test.py
etl/pipelines/: BaseETLPipeline.py  Cleaner.py
helpers/: Renamer.py  Renamer_test.py
src/data_science_lib/basic_statistics/: scores.py  scores_test.py
src/data_science_lib/etl/: DirWatcher.py  __init__.py
src/data_science_lib/etl/cleaners/: Cleaner.py  Cleaner_test.py
src/data_science_lib/etl/data_readers/: Readers.py
src/data_science_lib/etl/outliers/: OutlierRemover_test.py  OutlierSmoother_test.py  __init__.py  outlier_remover.py  outlier_remover_test.py  outlier_smoother.py  outlier_smoother_test.py
src/data_science_lib/etl/pipelines/: BaseETLPipeline.py  CleanerPipeline.py  __init__.py  base_data_source.py  base_etl_pipeline.py  cleaner_pipeline.py
src/data_science_lib/helpers/: Renamer.py  Renamer_test.py  __init__.py
src/data_science_lib/transformers/scaling/: ScalerNDim_test.py  __init__.py  scaler_n_dim.py  scaler_n_dim_test.py
src/data_science_lib/transformers/time_series/: __init__.py  casters.py  extender_filler_test.py  extenders.py  extrapolator.py  fillers.py
src/data_science_lib/transformers/transposing/: TransposerNDim.py  TransposerNDim_test.py  __init__.py  transposer_n_dim.py  transposer_n_dim_test.py
src/lib/basic_statistics/: scores.py  scores_test.py
src/lib/etl/: Cleaner.py  Cleaner_test.py  DirWatcher.py  OutlierRemover.py  OutlierRemover_test.py  Readers.py
src/lib/etl/cleaners/: Cleaner.py  Cleaner_test.py
src/lib/etl/data_cleaners/: Cleaner.py  Cleaner_test.py  OutlierRemover.py  OutlierRemover_test.py  OutlierSmoother.py  OutlierSmoother_test.py
src/lib/etl/data_readers/: Readers.py
src/lib/etl/outliers/: OutlierRemover.py  OutlierRemover_test.py  OutlierSmoother.py  OutlierSmoother_test.py
src/lib/etl/pipelines/: BaseDataSource.py  BaseETLPipeline.py  CleanerPipeline.py
src/lib/helpers/: Renamer.py
src/lib/transformers/: ScalerNDim.py  ScalerNDim_test.py  TransposerNDim.py  TransposerNDim_test.py
src/lib/transformers/scaling/: ScalerNDim.py  ScalerNDim_test.py
src/lib/transformers/time_series/: caster.py  casters.py  extender.py  extender_filler_test.py  extenders.py  filler.py
src/lib/transformers/transposing/: TransposerNDim_test.py
