[project]
name = "lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leon David Zipp", email = "leondavidzipp@gmx.de" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "multipledispatch>=1.0.0",
    "notebook>=7.4.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib"]

[tool.ruff]
indent-width = 4
line-length = 88
fix = true
lint.select = ["Q"]
respect-gitignore = false
show-fixes = true

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
