[project]
name = "DataScienceLib"
version = "0.1.0"
description = "lzipp's personal data science library including helpful functions for data analysis, data visualization, and machine learning."
readme = "README.md"
authors = [
    { name = "lzipp", email = "leondavidzipp@proton.me" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "matplotlib>=3.9.4",
    "multipledispatch>=1.0.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib"]

[tool.ruff]
indent-width = 4
line-length = 88
fix = true
lint.select = ["Q"]
respect-gitignore = false
show-fixes = true

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.0",
]
